@@ -1,3 +1,9 @@
+2003-06-12  Uwe Pross  <uwe.pross@e-technik.tu-chemnitz.de>
+
+	* logo-competition/logos/Aric_Campling/index.php:
+	* logo-competition/logos_new.php:
+	Added logo.
+
 2003-06-11  Mikhael Goikhman  <migo@homemail.com>
 
 	* logo-competition/logos_new.php:
